deployments/nginx/ingress.yaml
  apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: ingress
    namespace: default
  spec:
    rules:
      - host: hello-kubernetes.aharon.com
        http:
          paths:
            - backend:
                serviceName: hello-kubernetes
                servicePort: 80
              path: /
---
  apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    namespace: jenkins
    annotations:
      kubernetes.io/ingress.class: nginx
    name: jenkins-ingress
  spec:
    rules:
      - host: a86906eb1dab54b9a8ace843f250b782-21a1bb530a07e46d.elb.eu-west-1.amazonaws.com
        http:
          paths:
            - backend:
                serviceName: jenkins
                servicePort: 8080
              path: /
 # This section is only required if TLS is to be enabled for the Ingress
    #tls:
    #    - hosts:
    #        - www.example.com
    #      secretName: example-tls
---
  apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    namespace: app1
    annotations:
      kubernetes.io/ingress.class: nginx
    name: app1-ingress
  spec:
    rules:
      - host: a86906eb1dab54b9a8ace843f250b782-21a1bb530a07e46d.elb.eu-west-1.amazonaws.com
        http:
          paths:
            - backend:
                serviceName: kubeapp-ecr-nodeport-service
                servicePort: 80
              path: /index.html
